# Meson build logic for libcrypt: documentation.
#
#  Copyright 2007-2017 Thorsten Kukuk and Zack Weinberg
#  Copyright 2018-2019 Björn Esser and Zack Weinberg
#
#  This library is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Lesser General Public License
#  as published by the Free Software Foundation; either version 2.1 of
#  the License, or (at your option) any later version.
#
#  This library is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public
#  License along with this library; if not, see
#  <https://www.gnu.org/licenses/>.

# keep this list sorted first by section (the file suffix), then by name
MANPAGES = [
  'crypt.3',
  'crypt_checksalt.3',
  'crypt_gensalt.3',
  'crypt_gensalt_ra.3',
  'crypt_gensalt_rn.3',
  'crypt_preferred_method.3',
  'crypt_r.3',
  'crypt_ra.3',
  'crypt_rn.3',
  'crypt.5',
]

install_man(MANPAGES)
